docs/api/qiskit/0.19/qiskit.circuit.library.CRXGate.mdx
---
title: CRXGate (v0.19)
description: API reference for qiskit.circuit.library.CRXGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CRXGate
---

# CRXGate

<Class id="qiskit.circuit.library.CRXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/rx.py" signature="CRXGate(theta, label=None, ctrl_state=None)" modifiers="class">
  Controlled-RX gate.

  **Circuit symbol:**

  ```python
  q_0: ────■────
       ┌───┴───┐
  q_1: ┤ Rx(ϴ) ├
       └───────┘
  ```

  **Matrix representation:**

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}CRX(\lambda)\ q_0, q_1 =
I \otimes |0\rangle\langle 0| + RX(\theta) \otimes |1\rangle\langle 1| =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & \cos{\th} & 0 & -i\sin{\th} \\
0 & 0 & 1 & 0 \\
0 & -i\sin{\th} & 0 & \cos{\th}
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌───────┐
    q_0: ┤ Rx(ϴ) ├
         └───┬───┘
    q_1: ────■────
    ```

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}CRX(\theta)\ q_1, q_0 =
|0\rangle\langle0| \otimes I + |1\rangle\langle1| \otimes RX(\theta) =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 1 & 0 & 0 \\
0 & 0 & \cos{\th}   & -i\sin{\th} \\
0 & 0 & -i\sin{\th} & \cos{\th}
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$
  </Admonition>

  Create new CRX gate.

  ## Attributes

  <span id="crxgate-ctrl-state" />

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CRXGate.ctrl_state" attributeTypeHint="int">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  <span id="crxgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.CRXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="crxgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.CRXGate.definition" attributeTypeHint="List">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  <span id="crxgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.CRXGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="crxgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.CRXGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="crxgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.CRXGate.add_decomposition" signature="CRXGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="crxgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.CRXGate.assemble" signature="CRXGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="crxgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.CRXGate.broadcast_arguments" signature="CRXGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="crxgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.CRXGate.c_if" signature="CRXGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="crxgate-control" />

  ### control

  <Function id="qiskit.circuit.library.CRXGate.control" signature="CRXGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="crxgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.CRXGate.copy" signature="CRXGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="crxgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.CRXGate.inverse" signature="CRXGate.inverse()">
    Return inverse RX gate (i.e. with the negative rotation angle).
  </Function>

  <span id="crxgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.CRXGate.is_parameterized" signature="CRXGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="crxgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.CRXGate.mirror" signature="CRXGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="crxgate-power" />

  ### power

  <Function id="qiskit.circuit.library.CRXGate.power" signature="CRXGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="crxgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.CRXGate.qasm" signature="CRXGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="crxgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.CRXGate.repeat" signature="CRXGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="crxgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.CRXGate.to_matrix" signature="CRXGate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>
</Class>

